@@ -1,3 +1,7 @@
+2008-10-29  Richard Hult  <richard@imendio.com>
+
+	* src/dh-window.c: Minor cleanups.
+
 2008-10-28  Richard Hult  <richard@imendio.com>
 
 	* src/dh-search.c (dh_search_new): Remove the extra frame and set
